# meeting-copilot

./: .gitignore  README.md  package.json  pnpm-lock.yaml
audio-helper/: Package.swift  README.md
audio-helper-win/: Cargo.toml  README.md
audio-helper-win/src/: main.rs
audio-helper/Sources/AudioHelper/: MicCapture.swift  PCMConverter.swift  Protocol.swift  SystemAudioCapture.swift  main.swift
docs/: 2026-05-26-design.md  2026-05-26-plan-1-audio-asr.md  2026-05-26-plan-2-rag-suggestions.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: bundle-audio-helper.ps1  bundle-audio-helper.sh  bundle-helper.mjs
src-tauri/src/: commands.rs  config.rs  error.rs  keychain.rs  lib.rs  main.rs  orchestrator.rs  templates.rs
src-tauri/src/asr/: aliyun_paraformer.rs  mod.rs  tests.rs
src-tauri/src/audio_pump/: frame.rs  helper_proc.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/llm/: minimax.rs  mod.rs  openai_compat.rs
src-tauri/src/minutes/: generator.rs  mod.rs  prompt.rs
src-tauri/src/rag/: chunker.rs  embedding.rs  ingest.rs  mod.rs  parser.rs  retrieve.rs  tests.rs
src-tauri/src/suggestion/: engine.rs  mod.rs  prompt.rs  tests.rs
src/components/: FileDropzone.tsx  MaterialFolderPicker.tsx  MeetingForm.tsx  SuggestionCard.tsx  TranscriptView.tsx
src/lib/: tauri-bridge.ts
src/pages/: Floating.tsx  HistoryDetail.tsx  HistoryList.tsx  MeetingView.tsx  MinutesView.tsx  Settings.tsx  Setup.tsx
