[package]
name = "audio-helper-win"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "AudioHelper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Devices_Properties",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
